[package]
name = "udp_connections"
repository = "https://github.com/sidit77/udp_connections"
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
crc32fast = "1.2"
fastrand = "1.5"