[package]
name = "message_channels_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
udp_connections = { path="../../udp_connections", features=["network_simulator"] }
message_channels = { path="../../message_channels" }
byteorder = "1.4"